--- a/CalDavServer/CalDav.Server.csproj
+++ b/CalDavServer/CalDav.Server.csproj
@@ -11,8 +11,8 @@
     <ProjectTypeGuids>{E3E379DF-F4C6-4180-9B81-6769533ABE47};{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CalDavServer</RootNamespace>
-    <AssemblyName>CalDavServer</AssemblyName>
+    <RootNamespace>CalDav.Server</RootNamespace>
+    <AssemblyName>CalDav.Server</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>false</UseIISExpress>
@@ -149,6 +149,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CalDav\CalDav.csproj">
+      <Project>{01a4c4cf-5ad1-4324-a391-dc922c84be1c}</Project>
+      <Name>CalDav</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
