--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -63,8 +63,13 @@
     <Compile Include="ParsingFilters.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ParsingBasic.cs" />
+    <Compile Include="UnitTest1.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\CalDav.Client\CalDav.Client.csproj">
+      <Project>{1b9b42a0-a34b-4bf6-a5d5-21c46ed0d9b3}</Project>
+      <Name>CalDav.Client</Name>
+    </ProjectReference>
     <ProjectReference Include="..\CalDav.Server\CalDav.Server.csproj">
       <Project>{ddb10a63-4724-4729-8082-77a73f87cb4a}</Project>
       <Name>CalDav.Server</Name>
