--- a/CalDav/CalDav.csproj
+++ b/CalDav/CalDav.csproj
@@ -45,17 +45,20 @@
     <Compile Include="Calendar.cs" />
     <Compile Include="CalendarCollection.cs" />
     <Compile Include="CalendarQuery.cs" />
+    <Compile Include="Classes.cs" />
     <Compile Include="Common.cs" />
     <Compile Include="Contact.cs" />
     <Compile Include="Event.cs" />
     <Compile Include="Filter.cs" />
     <Compile Include="FreeBusy.cs" />
+    <Compile Include="Frequencies.cs" />
     <Compile Include="ISerializeToICAL.cs" />
     <Compile Include="IHasParameters.cs" />
     <Compile Include="JournalEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Recurrence.cs" />
     <Compile Include="Serializer.cs" />
+    <Compile Include="Statuses.cs" />
     <Compile Include="TimeZone.cs" />
     <Compile Include="ToDo.cs" />
     <Compile Include="Trigger.cs" />
