--- a/CalDav.Server/CalDav.Server.csproj
+++ b/CalDav.Server/CalDav.Server.csproj
@@ -120,7 +120,6 @@
   <ItemGroup>
     <Compile Include="App_Start\AttributeRouting.cs" />
     <Compile Include="Controllers\CalDavController.cs" />
-    <Compile Include="Controllers\LambdaResult.cs" />
     <Compile Include="Controllers\Result.cs" />
     <Compile Include="Controllers\Route.cs" />
     <Compile Include="Global.asax.cs">
@@ -171,11 +170,11 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>False</UseIIS>
+          <UseIIS>True</UseIIS>
           <AutoAssignPort>False</AutoAssignPort>
           <DevelopmentServerPort>60399</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://127.0.0.1:8080</IISUrl>
+          <IISUrl>http://localhost/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>http://localhost:8080</CustomServerUrl>
