--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,8 @@
-﻿*.suo
+﻿
 packages/
-CalDav.Client/bin/
-CalDav.Client/obj/
-CalDav/obj/
-CalDav/bin/
+*/bin/
+*/obj/
 *.user
-Tests/bin/
-Tests/obj/
-Console/obj/
-Console/bin/
 TestResults/
-CalDavServer/App_Data/
-CalDav.Server/bin/
-CalDav.Server/obj/
-CalDav.Server/App_Data/
-CalDav.WPF/bin/
-CalDav.WPF/obj/
+*/App_Data/
+*.suo
