--- a/CalDav.Server/CalDav.Server.csproj
+++ b/CalDav.Server/CalDav.Server.csproj
@@ -55,7 +55,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="CalDav.Server.nuspec" />
+    <None Include="CalDav.Server.nuspec">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
