--- a/CalDav/CalDav.csproj
+++ b/CalDav/CalDav.csproj
@@ -79,6 +79,9 @@
     <Compile Include="CalendarInfo.cs" />
     <Compile Include="CalendarQuery.cs" />
     <Compile Include="Classes.cs" />
+    <Compile Include="Client\Calendar.cs" />
+    <Compile Include="Client\Common.cs" />
+    <Compile Include="Client\Server.cs" />
     <Compile Include="Common.cs" />
     <Compile Include="Contact.cs" />
     <Compile Include="DateTimeRange.cs" />
@@ -95,6 +98,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Recurrence.cs" />
     <Compile Include="Serializer.cs" />
+    <Compile Include="Server\CalDavController.cs" />
+    <Compile Include="Server\ICalendarRepository.cs" />
+    <Compile Include="Server\Result.cs" />
     <Compile Include="Statuses.cs" />
     <Compile Include="TimeZone.cs" />
     <Compile Include="TimeZoneDetail.cs" />
@@ -105,6 +111,7 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
