--- a/Demo.MVC/Web.config
+++ b/Demo.MVC/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=152368
@@ -8,22 +8,17 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
+  
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-Demo.MVC-20120823092719;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Demo.MVC-20120823092719.mdf" />
   </connectionStrings>
+  
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
-  <!--
-    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
-
-    The following attributes can be set on the <httpRuntime> tag.
-      <system.Web>
-        <httpRuntime targetFramework="4.5" />
-      </system.Web>
-  -->
+  
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     
@@ -38,23 +33,23 @@
       </namespaces>
     </pages>
     <httpRuntime />
-    
     <!--
             If you are deploying to a cloud environment that has multiple web server instances,
             you should change session state mode from "InProc" to "Custom". In addition,
             change the connection string named "DefaultConnection" to connect to an instance
             of SQL Server (including SQL Azure and SQL  Compact) instead of to SQL Server Express.
       -->
-    <sessionState mode="InProc" customProvider="DefaultSessionProvider">
+    <!--<sessionState mode="InProc" customProvider="DefaultSessionProvider">
       <providers>
         <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
       </providers>
-    </sessionState>
+    </sessionState>-->
   </system.web>
   
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false" />
+    <!--<validation validateIntegratedModeConfiguration="false" />-->
     <modules runAllManagedModulesForAllRequests="true" />
+        <directoryBrowse enabled="true" />
   </system.webServer>
   
   <runtime>
