--- a/CalCli/CalCli.csproj
+++ b/CalCli/CalCli.csproj
@@ -46,11 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="API\IAlarm.cs" />
-    <Compile Include="API\ICalendar.cs" />
-    <Compile Include="API\IConnection.cs" />
-    <Compile Include="API\IEvent.cs" />
-    <Compile Include="API\IToDo.cs" />
+    <Compile Include="Connections\GoogleConnection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\GoogleOAuthForm.cs">
       <SubType>Form</SubType>
@@ -58,7 +54,7 @@
     <Compile Include="UI\GoogleOAuthForm.Designer.cs">
       <DependentUpon>GoogleOAuthForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\GoogleOAuthFormResponse.cs" />
+    <Compile Include="Connections\GoogleOAuthFormResponse.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CalDav.Client\CalDav.Client.csproj">
