--- a/Demo.CalCli/Demo.CalCli.csproj
+++ b/Demo.CalCli/Demo.CalCli.csproj
@@ -83,6 +83,14 @@
       <Project>{dbefed7e-dc69-48c0-9ac3-428b2168a17a}</Project>
       <Name>CalCli</Name>
     </ProjectReference>
+    <ProjectReference Include="..\CalDav.Client\CalDav.Client.csproj">
+      <Project>{1b9b42a0-a34b-4bf6-a5d5-21c46ed0d9b3}</Project>
+      <Name>CalDav.Client</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CalDav\CalDav.csproj">
+      <Project>{01a4c4cf-5ad1-4324-a391-dc922c84be1c}</Project>
+      <Name>CalDav</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
