--- a/CalDav.Client/CalDav.Client.csproj
+++ b/CalDav.Client/CalDav.Client.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Calendar.cs" />
     <Compile Include="Common.cs" />
+    <Compile Include="IConnection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server.cs" />
   </ItemGroup>
