--- a/CalDav/CalDav.csproj
+++ b/CalDav/CalDav.csproj
@@ -45,7 +45,7 @@
     <Compile Include="Alarm.cs" />
     <Compile Include="API\IAlarm.cs" />
     <Compile Include="API\ICalendar.cs" />
-    <Compile Include="API\IConnection.cs" />
+    <Compile Include="IConnection.cs" />
     <Compile Include="API\IEvent.cs" />
     <Compile Include="API\IToDo.cs" />
     <Compile Include="Calendar.cs" />
