--- a/CalCli/CalCli.csproj
+++ b/CalCli/CalCli.csproj
@@ -50,6 +50,7 @@
     <Compile Include="API\ICalendar.cs" />
     <Compile Include="API\IEvent.cs" />
     <Compile Include="API\IToDo.cs" />
+    <Compile Include="Connections\BasicConnection.cs" />
     <Compile Include="Connections\GoogleConnection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\GoogleOAuthForm.cs">
