--- a/CalCli/CalCli.csproj
+++ b/CalCli/CalCli.csproj
@@ -58,6 +58,10 @@
     <Compile Include="Connections\GoogleOAuthFormResponse.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\CalCli.API\CalCli.API.csproj">
+      <Project>{2c258fae-97ed-4916-b5a3-4723700d675d}</Project>
+      <Name>CalCli.API</Name>
+    </ProjectReference>
     <ProjectReference Include="..\CalDav.Client\CalDav.Client.csproj">
       <Project>{1b9b42a0-a34b-4bf6-a5d5-21c46ed0d9b3}</Project>
       <Name>CalDav.Client</Name>
